Add properties for logging, tracing and connection timeout

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,9 @@
 
 trep.service-name=DIRECT_FEED
 trep.port-number=14002
+
+# RSSL transport logging: Use "console", "none", or a J2SE Logging API filename
+trep.logfile-name=console
+
+# Enable or disable detailed tracing of the connection process
+trep.mount-trace=false
